# kuIotBigdataClass

./: .clang-format  .gitignore  README.md  history.txt  id_rsa  kaggle_titanic2.ipynb
C/: Makefile  abort.c  allLibrary.c  arg.c  celsius2Fahr.c  circle.c  ex2_1.cpp  ex2_2.cpp  ex2_4_greeting.cpp  ex3_3.cpp  ex3_4.cpp  fahr2Celsius.c  fahr2Celsius2.c  fahr2Celsius4.c  frameGreeting2.cpp  greeting.cpp  greeting2.cpp  greeting3.cpp  homework.cpp  limits.c  literal.c  math.c  score.c  score.cpp  score2.cpp  test  test.c  triangle.c
C++/: Doxyfile
C++/chap1/2-2/: CMakeLists.txt  booklist  booklist.cpp  main2
C++/chap10/: ex10-1-GenericMySwap.cpp  ex10-10-stringVector.cpp  ex10-11-iterator.cpp  ex10-12-MapEx.cpp  ex10-13-sort.cpp  ex10-14-auto.cpp  ex10-15-sum.cpp  ex10-16-autoandlambda.cpp  ex10-17-lambda.cpp  ex10-18-refcapturelist.cpp  ex10-2-GenericBigger.cpp  ex10-3-GenericSum.cpp  ex10-4-GenericMCopy.cpp  ex10-5-printOverloading.cpp  ex10-6-MyStack.cpp  ex10-7-usingMyStack.cpp  ex10-8-GClass.cpp  myswap.cpp
C++/chap11/: ex11-1-ostreamFunctions.cpp  ex11-10-InsertionOperatorForBook.cpp  ex11-11-ExtractionOperator.cpp  ex11-13-UserDefinedManipulator.cpp  ex11-2-get.cpp  ex11-3-get.cpp  ex11-4-getline.cpp  ex11-5-setf-unsetf.cpp  ex11-6-width-fill-precision.cpp  ex11-8-Manipulator.cpp  ex11-9-InsertionOperator.cpp
C++/chap12/: changeencoding.py  ex12-1-KeyToFileEx.cpp  ex12-10-IntDoubleBinaryRW.cpp  ex12-11-TestStreamState.cpp  ex12-12-FileSize.cpp  ex12-2-ifstreamTextFileRead.cpp  ex12-3-TextFileViewer.cpp  ex12-4-FileAppend.cpp  ex12-5-GetLineFile.cpp  ex12-6-GetLineWords.cpp  ex12-7-BinaryCopyGetPut.cpp  ex12-8-BlockRead.cpp  ex12-9-BinaryCopyReadWrite.cpp  fig12-8-song.cpp
C++/chap13/: Main.cpp  ex13-1 getExp.cpp  ex13-2-getExp.cpp  ex13-3 getExp.cpp  ex13-4-ExceptionAverage.cpp  ex13-5-ExceptionGetExp.cpp  ex13-6-StringToIntException.cpp  ex13-8-ExceptionClass.cpp  fig13-4-ExceptionMultiply.cpp  fig13-5-NestedTry.cpp
C++/chap2/: CMakeLists.txt  ex2-1-simpleC++.cpp  ex2-3-KeyInput.cpp  ex2-4-ReadC-String.cpp  ex2-5-password.cpp  ex2-6-getline.cpp  ex2-7-string.cpp  getString.cpp  test.cpp  widthHeight.cpp
C++/chap2/2-1/: area.cpp  main.cpp
C++/chap2/2-2/: CMakeLists.txt  main.cpp
C++/chap3/: ex3-10-StructCircle.cpp  ex3-2-Rectangle.cpp  (+6 more)
docs/: 2조 Snake_Game.pptx  3조 1차 프로젝트_계획서.hwp  3조 1차 프로젝트_기술서.hwp  3조 Find the Same Picture.pptx  code-style.md  spec.md
madangweb/: CMakeLists.txt  app.py  web1.cpp  web2.cpp  web3.cpp  web4.cpp
madangweb/templates/: test.html
my-c-project/: CMakeLists.txt  Makefile  README.md  my-c-project
my-c-project/include/: main.h  tetris.h  utils.h
my-c-project/src/: main.c  tetris.c  utils.c
my-c-project/tests/: test_main.cpp
mysql/: DCL,sql.sql  DDL.sql  built_in_function.sql  delete_foreign_key.sql  demo_madang.sql  index.sql  newmadang.mwb  newmadang.mwb.bak  procedure.sql  select1.sql  select2-groupby.sql  summer.sql  trigger.sql  view.sql
new-uv/: README.md  hello.py  pyproject.toml
openCV/: CMakeLists.txt  Makefile  hellOpenCV.cpp  openCV
openCV/ch14/: CMakeLists.txt  corners.cpp  keypoints.cpp  matching.cpp  stitching.cpp
ppt/: ch00_강의안내.pptx  ch01_데이터베이스 시스템.pptx  ch04_SQL 고급.pptx  ch05_데이터베이스 프로그래밍.pptx  ch09_데이터베이스 보안과 관리.pptx
pygame/: simpleGame.py
python/: assertTest.py  booklist.py  calcaulateEverage.py  celcius.py  classVariable.py  colectionsModules.py  condition.py  deciamlToBinary.py  decorator.py  default.py  dictionaryFunction.py  fileWrite.py  fileopen.py  fileterMap.py  for.py  function1.py  ingeritancePerson.py  input.py  keywordArgument.py  list.py  list2.py  listComprehension.py  mapReduce.py  mkdir1.py  multiplicationtable.py  multiplicationtable2.py  myoperator.py  noteBookPython.py  numberGame.py  package_ex.py  packing.py  pickleTest.py  pickleTest2.py  polymorphosmClass.py  pythonClass.py  reverseString.py  setUnion.py  strMethod.py  stringFormat.py  textmining.py  (+10 more)
pythonData/: AssessingModel.py  anovaTest.py  aucCurve.py  beautifulsoup1.py  binormTest.py  categoriData.py  categoriPlot.py  cetralLimitPlot.py  chi2Statistics.py  configParserTest.py  confussionMatrics.py  cooksDistance.py  corRelation.py  csv1.py  csv3.py  csv4.py  descriminantAnalysis.py  deviation.py  dominantVariable.py  downSampling.py  featureEnginnering.py  gowersDistance.py  heteroskedasticity.py  hierarchicalClustering.py  histogramTest.py  json1.py  json_example.json  kMeanClustering.py  kMeanClustering2.py  kMeanClusteringDeterminN.py  knn2Test.py  knnTest.py  lab2.py  linearRegresstionTest.py  loggingTest.py  loggingformatter.py  loggingprogram.py  logisticRegresstion.py  manyLevelStep.py  matplotTest.py  (+28 more)
pythonML/: LinearRSGDMain.py  LinearRSGDTest.py  adaboostTest.py  baggingProcess.py  bindingTest.py  bostonHouseRegression.py  confusionMatricsTest.py  dicisionTreeTest.py  dropProcessing.py  featureScaling.py  fillProcessing.py  get_dummiesTest.py  gradientDescent.py  linearRegressionCustom.py  losgisticLegressionTest.py  maeRmseR2.py  mnistClassify.ipynb  newsGroupNB.ipynb  simpleBaize.py  softmaxTest.py  sportsNaiveBayze.py  testAndSplit.py  votingClassifierTest.py
python_C_mysql/: CMakeLists.txt  Makefile  booklist  booklist.c  booklist.py
pytorch/: datasetTest.py  decisionTreeTest.py  housePrice.ipynb  housePrice2.ipynb  kaggle_titanic.ipynb  kaggle_titanic2.ipynb  train_valid_split.py
uv-project-test/: README.md  hello.py  pyproject.toml
(+517 files in other folders)
