cmake_minimum_required(VERSION 3.0)
project(01-HelloWorld)
find_package(OpenCV REQUIRED)
file(GLOB SOURCES "*.cpp")

foreach(SOURCE ${SOURCES})
    message(STATUS "SOURCE: ${SOURCE}")
    get_filename_component(EXE_NAME ${SOURCE} NAME_WE)
    add_executable(${EXE_NAME} ${SOURCE})
    target_link_libraries(${EXE_NAME} ${OpenCV_LIBS})
    target_include_directories(${EXE_NAME} PRIVATE ${OpenCV_INCLUDE_DIRS})
endforeach()
